# soa_hackathon

./: .gitignore  README.md  presentation.html  presentation.qmd  presentation_temp.pptx  pyproject.toml  ~$presentation_temp.pptx
task_1/results/: .gitkeep  cluster_summary_1.csv
task_2/: hit_prediction_pipline.ipynb  mappings.py  models.py  training.ipynb
task_2/.ipynb_checkpoints/: hit_prediction_pipline-checkpoint.ipynb  mappings-checkpoint.py
task_3/notebooks/: 02_inference.ipynb  genre_ensemble.py
task_3/notebooks/.ipynb_checkpoints/: 01_training-checkpoint.ipynb  03_business-checkpoint.ipynb
task_4/: task_4_trends.ipynb
task_bonus/: recommendation_engine_1.ipynb
task_bonus/result/: feature_scaler.pkl  readme.txt
