[project]
name = "soa"
version = "0.1.0"
description = "Hackathon solution"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "optuna-integration>=4.8.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]
